# secrets-manager

./: .gitignore  AGENTS.md  BACKEND_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  Makefile  Makefile.windows  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release-build-dist.yml
examples/: basic_usage.py  env_file_usage.py  rotation_example.py
src/secrets_manager/: __init__.py  config.py  manager.py  utils.py
tests/: test_config.py  test_manager.py  test_secrets_manager.py  test_utils.py
