[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SecretsManager"
version = "0.1.0"
description = "Thread-safe secrets manager with Fernet encryption and key rotation"
readme = "README.md"
authors = [
    {name = "Daniel Correa Lobato", email = "daniel@lobato.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["encryption", "fernet", "secrets", "key-rotation", "pbkdf2", "cryptography", "security"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=25",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dclobato/SecretsManager"
Documentation = "https://github.com/dclobato/SecretsManager#readme"
Repository = "https://github.com/dclobato/SecretsManager"
Issues = "https://github.com/dclobato/SecretsManager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=secrets_manager",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
